--- a/www/views/home.html
+++ b/www/views/home.html
@@ -1,6 +1,6 @@
-<ion-view view-title="FabScan" classe="title">s
+<ion-view view-title="FabScan">
 	<ion-content>
-		<div class="home">
+		<div class="home" ng-controller="homeController">
 			<img src="img/logo-quai-lab.png">
 		    	<button class="button-home button-scan" ui-sref="Scan">
 		  			Lire
@@ -11,4 +11,4 @@
 				<img class="qrcode" src="img/Qrcode.png">
 		</div>
 	</ion-content>
-</ion-view>s
+</ion-view>
