--- a/www/views/Saisir.html
+++ b/www/views/Saisir.html
@@ -1,10 +1,8 @@
-<ion-view view-title="FabScan">
-	<ion-content>
-      <div class="div_center">
-        <h1>Saisir</h1>
-      </div>
+<ion-view view-title="Saisir">
+<ion-content>
 
-      <div class="title">       
+      <div class="title">
+            <button id="showScan" type="button">Afficher le scanner</button>
             <qr-scanner id="qr-scanner" width="400" height="300" ng-success="onSuccess(data)" />
       </div>
       
@@ -28,5 +26,5 @@
           <button  type='submit'>Enregistrer</button>     
         </form>
       </div>
-  </ion-content>
-</ion-view>
+</ion-content>
+</ion-view >
