--- a/www/views/Scan.html
+++ b/www/views/Scan.html
@@ -1,13 +1,13 @@
-<ion-view view-title="FabScan">
-<ion-content >
-	<div class="div_center">
-        <h1>Scan</h1>
-      </div>
-
-	<div class="center">
-        <qr-scanner width="400" height="300" ng-success="onSuccess(data)" />
-        <div id="title"></div>
-        <a id="read"><img id="quickview"></a>
-    </div>
-</ion-content>
+<ion-view view-title="Scan">
+	<ion-content >
+		<div class="center">
+	        <qr-scanner width="400" height="300" ng-success="onSuccess(data)" />
+	    
+	    </div>
+	    <div class="center">
+	    	<div class="title" id="title"></div>
+	        <a id="read"><img id="quickview"></a>
+	        <a href="http://www.quai-lab.com">Google</a>
+	    </div>
+	</ion-content>
 </ion-view>
