--- a/www/views/authentification.html
+++ b/www/views/authentification.html
@@ -1,5 +1,8 @@
-<ion-view view-title="FabScan" classe="title">s
+<ion-view view-title="Admin" classe="title">
 	<ion-content>
 		<qr-scanner width="400" height="300" ng-success="onSuccess(data)" />
+		<div class="saisir">
+			<h1>Veuillez scanner le QR code d'authentification</h1>
+		</div>
 	</ion-content>
 </ion-view>
